# pyopnsenseapi

./: .gitignore  README.rst  setup.cfg
pyopnsenseapi/: __init__.py  const.py
pyopnsenseapi/modules/: __init__.py  client.py  enums.py
pyopnsenseapi/modules/core/: const.py  firmware.py
pyopnsenseapi/modules/diagnostics/: __init__.py  activity.py  const.py  dns.py  dns_diagnostics.py  firewall.py  interface.py  netflow.py
