[metadata]
name = pyopnsenseapi
summary = A python API client for OPNsense
homepage = http://github.com/11harveyj/pyopnsenseapi
description_file =
    README.rst
author = Jordan Harvey
author_email = jordan@hrvy.uk
classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
python_requires = >=3.7

[files]
packages =
    pyopnsenseapi

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
